--- a/.github/actions/setup-hygiene-env/action.yaml
+++ b/.github/actions/setup-hygiene-env/action.yaml
@@ -7,6 +7,21 @@ inputs:
     description: "Java version to setup"
     required: false
     default: "24"
+  trigger-event:
+    required: true
+    description: ""
+  ref-name:
+    required: true
+    description: ""
+  head-ref:
+    required: true
+    description: ""
+  base-ref:
+    required: true
+    description: ""
+  github-token:
+    required: true
+    description: ""
 
 outputs:
   startTime:
@@ -15,6 +30,9 @@ outputs:
   COMMIT_MSG:
     description: ""
     value: ${{ steps.setup_vars.outputs.COMMIT_MSG }}
+  COMMIT_AUTHOR:
+    description: ""
+    value: ${{ steps.setup_vars.outputs.COMMIT_AUTHOR }}
   TRIGGER_EVENT:
     description: ""
     value: ${{ steps.setup_vars.outputs.TRIGGER_EVENT }}
@@ -42,68 +60,115 @@ runs:
 
     - name: Log Captured Start Time
       run: |
-          echo "🕒 Workflow Start Time captured from setup-hygiene-env: ${{ steps.setup.outputs.startTime }}"
+        echo "🕒 Workflow Start Time captured from setup-hygiene-env: ${{ steps.setup.outputs.startTime }}"
       shell: pwsh
 
     - name: Setup common varaibles
       id: setup_vars
       shell: pwsh
       env:
-        COMMIT_MSG: ${{ github.event.head_commit.message || github.event.pull_request.title || '' }}
-        TRIGGER_EVENT: ${{ github.event_name }}
-        TRIGGER_BRANCH: ${{ github.ref_name }}
-        SOURCE_BRANCH: ${{ github.head_ref }}
-        PR_SOURCE_BRANCH: ${{ github.event.pull_request.head.ref || '' }}
-        PR_TARGET_BRANCH: ${{ github.event.pull_request.base.ref || '' }}
+        TRIGGER_EVENT: ${{ inputs.trigger-event }}
+        GITHUB_REF_NAME: ${{ inputs.ref-name }}
+        GITHUB_HEAD_REF: ${{ inputs.head-ref }}
+        GITHUB_BASE_REF: ${{ inputs.base-ref }}
+        GITHUB_TOKEN: ${{ inputs.github-token  }}
       run: |
         Write-Host "🔎 Setting up common variables"
-        $SKIP_FLAG = "--skip-sonar"
-        $REASON = ""
+        Write-Host "Token available: $env:GITHUB_TOKEN"
+
         $TRIGGER_EVENT = $env:TRIGGER_EVENT
-        # Determine source and target branches explicitly, preserving your variable names
-        if ($env:TRIGGER_EVENT -ieq "pull_request") {
-          $COMMIT_MSG = "${{ github.event.pull_request.title }}"
-          $SRC_BRANCH = $env:PR_SOURCE_BRANCH
-          $TGT_BRANCH = $env:PR_TARGET_BRANCH
-          $BRANCH_EXECUTED = "$SRC_BRANCH → $TGT_BRANCH"
-        } else {
-          $COMMIT_MSG = "${{ github.event.head_commit.message }}"
-          $SRC_BRANCH = $env:SOURCE_BRANCH
-          $TGT_BRANCH = $env:TRIGGER_BRANCH
-          $BRANCH_EXECUTED = $TGT_BRANCH
+        $GITHUB_REF_NAME = $env:GITHUB_REF_NAME
+        $GITHUB_HEAD_REF = $env:GITHUB_HEAD_REF
+        $GITHUB_BASE_REF = $env:GITHUB_BASE_REF
+        
+        # --- Always fetch latest commit info ---
+        git fetch origin +refs/heads/*:refs/remotes/origin/* || Write-Host "⚠️ Could not fetch origin"
+        
+        # --- Last commit info ---
+        $LAST_COMMIT_MSG = git log -1 --pretty=%B
+        $LAST_COMMIT_AUTHOR = git log -1 --pretty=%an
+        $COMMIT_MSG = $LAST_COMMIT_MSG
+        $COMMIT_AUTHOR = $LAST_COMMIT_AUTHOR
+        
+        
+        $DEFAULT_BRANCH = "${{ github.event.repository.default_branch }}"
+        
+        # --- Determine source and target branches ---
+        if ($TRIGGER_EVENT -ieq "workflow_dispatch" -or $TRIGGER_EVENT -ieq "schedule") {
+            $SRC_BRANCH = $GITHUB_REF_NAME
+            $TGT_BRANCH = $DEFAULT_BRANCH
+        } elseif ($TRIGGER_EVENT -ieq "push") {
+
+            # Default target branch is the branch receiving the push
+            $TGT_BRANCH = $GITHUB_REF_NAME
+        
+            # Get last commit info
+            $LAST_COMMIT_MSG = git log -1 --pretty=%B
+            $commitSHA = git rev-parse HEAD
+        
+            # Detect merge commit patterns anywhere in the message
+            $prMergePattern = '(Merge|Merged)\s+(pull request|PR)'
+        
+            if ($LAST_COMMIT_MSG -imatch $prMergePattern) {
+            Write-Host "⚡ Merge commit detected via PR → querying PR info"
+        
+            if (-not $env:GITHUB_TOKEN) {
+            Write-Host "❌ GITHUB_TOKEN not available. Cannot query PR info."
+            $SRC_BRANCH = $TGT_BRANCH
+            } else {
+            try {
+            # Query PR for source branch using commit SHA
+            $prResponse = gh api repos/${{ github.repository }}/commits/$commitSHA/pulls --jq '.[0].head.ref' 2>$null
+        
+            if (-not [string]::IsNullOrEmpty($prResponse)) {
+            $SRC_BRANCH = $prResponse
+            Write-Host "✅ Detected PR source branch: $SRC_BRANCH"
+          } else {
+            $SRC_BRANCH = $TGT_BRANCH
+            Write-Host "⚡ Could not detect PR → assuming direct commit"
+          }
+          } catch {
+            Write-Host "⚠️ Error querying PR info: $_"
+            $SRC_BRANCH = $TGT_BRANCH
+          }
+          }
+        
+          } else {
+            # Regular direct commit
+            Write-Host "⚡ Regular direct commit on $TGT_BRANCH"
+            $SRC_BRANCH = $TGT_BRANCH
+          }
         }
+        
+        $BRANCH_EXECUTED = $TGT_BRANCH
+        Write-Host "✅ SRC_BRANCH=$SRC_BRANCH | TGT_BRANCH=$TGT_BRANCH | BRANCH_EXECUTED=$BRANCH_EXECUTED"
+
         $REASON = ""
-            
-        # Case 1: Manual override → always skip
-        if ($COMMIT_MSG -match "--skip-sonar" ) {
+        
+        # Case 1: Commit message override → always take precedence
+        if ($LAST_COMMIT_MSG -match "--skip-sonar") {
           $SKIP_FLAG = "--skip-sonar"
           $REASON = "⚡ Commit message override → SKIP Sonar"
         }
         # Case 2: Scheduled run on main
-        elseif ($env:TRIGGER_EVENT -ieq "schedule") {
+        elseif ($TRIGGER_EVENT -ieq "schedule") { 
           $SKIP_FLAG = ""
           $REASON = "⚡ Scheduled run → RUN Sonar"
         }
-        # Case 3: Direct push to main
-        elseif ($TGT_BRANCH -ieq "main" -and [string]::IsNullOrEmpty($SRC_BRANCH)) {
+        # Case 3: Push to main
+          elseif ($TRIGGER_EVENT -ieq "workflow_dispatch") {
           $SKIP_FLAG = ""
-          $SRC_BRANCH="main"
-          $BRANCH_EXECUTED = $TGT_BRANCH
+          $REASON = "⚡ Manual workflow_dispatch → RUN Sonar"
+        } elseif ($TRIGGER_EVENT -ieq "push" -and $TGT_BRANCH -ieq "main") {
+          if ($LAST_COMMIT_MSG -imatch $prMergePattern) {
+          $REASON = "⚡ PR merged into main → RUN Sonar"
+        } else {
           $REASON = "⚡ Direct commit to main → RUN Sonar"
         }
-        # Case 4: PR from any branch → main
-        elseif ($TGT_BRANCH -ieq "main") {
-          $SKIP_FLAG = ""
-          $REASON = "⚡ PR into main → RUN Sonar"
-        }
-        # Case 5: PR into stage or tech-debt → skip
-        elseif ($TGT_BRANCH -ieq "stage" -or $TGT_BRANCH -ieq "tech-debt") {
-          $SKIP_FLAG = "--skip-sonar"
-          $REASON = "⚡ PR into stage/tech-debt → SKIP Sonar"
-        }
-        else {
+        } else {
           $REASON = "⚡ Default → SKIP Sonar (SRC=$SRC_BRANCH, TGT=$TGT_BRANCH)"
         }
+        # fallback
         if ([string]::IsNullOrEmpty($SKIP_FLAG)) {
           Write-Host "✅ Sonar will RUN | $REASON"
         } else {
@@ -113,6 +178,7 @@ runs:
         # Log for verification
         Write-Host "SKIP_FLAG=$SKIP_FLAG"
         Write-Host "COMMIT_MSG=$COMMIT_MSG"
+        Write-Host "COMMIT_AUTHOR=$COMMIT_AUTHOR"
         Write-Host "SRC_BRANCH=$SRC_BRANCH"
         Write-Host "TGT_BRANCH=$TGT_BRANCH"
         Write-Host "TRIGGER_EVENT=$TRIGGER_EVENT"
@@ -120,6 +186,7 @@ runs:
         
         "SKIP_FLAG=$SKIP_FLAG" >>  $env:GITHUB_OUTPUT
         "COMMIT_MSG=$COMMIT_MSG" >>  $env:GITHUB_OUTPUT
+        "COMMIT_AUTHOR=$COMMIT_AUTHOR" >>  $env:GITHUB_OUTPUT        
         "TRIGGER_EVENT=$TRIGGER_EVENT" >>  $env:GITHUB_OUTPUT
         "SRC_BRANCH=$SRC_BRANCH" >>  $env:GITHUB_OUTPUT
         "TGT_BRANCH=$TGT_BRANCH" >>  $env:GITHUB_OUTPUT
@@ -149,6 +216,15 @@ runs:
     - name: Compile Java Modules
       shell: cmd
       run: |
+      # 4. Compile Java Modules
+    - name: Compile Java Modules
+      shell: cmd
+      run: |
+        REM -----------------------------
+        REM Enable delayed expansion
+        REM -----------------------------
+        setlocal enabledelayedexpansion
+        
         set "JAVA_HOME=%JAVA_HOME%"
         set "OUT_PROD=out\production"
         set "OUT_TEST=out\test"
@@ -158,37 +234,92 @@ runs:
         set "TEST_MISC=misc_utils\src\test\java"
         set "JUNIT_JAR=tools\junit-console\junit-platform-console-standalone-1.13.0.jar"
 
-        if not exist "%OUT_PROD%\udemy_lpa_javamasterclass" (
-          if not exist "%OUT_PROD%\misc_utils" (
-            echo ? Compilation triggered
+        echo 🔹 Cleaning output directories
+        rmdir /s /q "%OUT_PROD%" >nul 2>&1
+        rmdir /s /q "%OUT_TEST%" >nul 2>&1
+        mkdir "%OUT_PROD%\udemy_lpa_javamasterclass"
+        mkdir "%OUT_PROD%\misc_utils"
+        mkdir "%OUT_TEST%\udemy_lpa_javamasterclass"
+        mkdir "%OUT_TEST%\misc_utils"
 
-            rmdir /s /q "%OUT_PROD%" >nul 2>&1
-            rmdir /s /q "%OUT_TEST%" >nul 2>&1
+        REM -----------------------------
+        REM Compile main module
+        REM -----------------------------
+        echo 🔹 Compiling udemy_lpa_javamasterclass
+        dir /s /b "%SRC_MAIN%\*.java" > sources_main.txt
+        set /a count_main=0
+        for /f %%f in (sources_main.txt) do set /a count_main+=1
+        echo 🔹 Number of main Java files: !count_main!
 
-            mkdir "%OUT_PROD%\udemy_lpa_javamasterclass"
-            mkdir "%OUT_PROD%\misc_utils"
-            mkdir "%OUT_TEST%\udemy_lpa_javamasterclass"
-            mkdir "%OUT_TEST%\misc_utils"
-
-            echo ? Compiling udemy_lpa_javamasterclass
-            dir /s /b "%SRC_MAIN%\*.java" > sources_main.txt
+        if  !count_main! GTR 0 (
             javac --enable-preview --release 24 -encoding UTF-8 -d "%OUT_PROD%\udemy_lpa_javamasterclass" @sources_main.txt
-
-            echo ? Compiling misc_utils
-            dir /s /b "%SRC_MISC%\*.java" > sources_misc.txt
-            javac --enable-preview --release 24 -encoding UTF-8 -cp "%OUT_PROD%\udemy_lpa_javamasterclass" -d "%OUT_PROD%\misc_utils" @sources_misc.txt
-
-            echo ? Compiling tests (masterclass)
-            dir /s /b "%TEST_MAIN%\*.java" > sources_test_main.txt
-            javac --enable-preview --release 24 -encoding UTF-8 -cp "%OUT_PROD%\udemy_lpa_javamasterclass;%OUT_PROD%\misc_utils;%JUNIT_JAR%" -d "%OUT_TEST%\udemy_lpa_javamasterclass" @sources_test_main.txt
-
-            echo ? Compiling tests (misc_utils)
-            if exist "%TEST_MISC%" (
-              dir /s /b "%TEST_MISC%\*.java" > sources_test_misc.txt
-              javac --enable-preview --release 24 -encoding UTF-8 -cp "%OUT_PROD%\udemy_lpa_javamasterclass;%OUT_PROD%\misc_utils;%JUNIT_JAR%" -d "%OUT_TEST%\misc_utils" @sources_test_misc.txt
+            if !ERRORLEVEL! NEQ 0 (
+                echo ❌ Compilation failed for udemy_lpa_javamasterclass
+                exit /b 1
             )
-
-            del sources_main.txt sources_misc.txt sources_test_main.txt sources_test_misc.txt
-          )
+            echo ✅ Finished compiling udemy_lpa_javamasterclass
+        ) else (
+            echo ⚠️ No main Java files found
         )
 
+        REM -----------------------------
+        REM Compile misc_utils
+        REM -----------------------------
+        echo 🔹 Compiling misc_utils
+        dir /s /b "%SRC_MISC%\*.java" > sources_misc.txt
+        set /a count_misc=0
+        for /f %%f in (sources_misc.txt) do set /a count_misc+=1
+        echo 🔹 !count_misc! misc_utils files
+        if !count_misc! GTR 0 (
+            javac --enable-preview --release 24 -encoding UTF-8 -cp "%OUT_PROD%\udemy_lpa_javamasterclass" -d "%OUT_PROD%\misc_utils" @sources_misc.txt
+            if !ERRORLEVEL! NEQ 0 (
+                echo ❌ Compilation failed for misc_utils
+                exit /b 1
+            )
+            echo ✅ Finished compiling misc_utils
+        ) else (
+            echo ⚠️ No misc_utils Java files found
+        )
+
+        REM -----------------------------
+        REM Compile test modules
+        REM -----------------------------
+        echo 🔹 Compiling tests (udemy_lpa_javamasterclass)
+        dir /s /b "%TEST_MAIN%\*.java" > sources_test_main.txt
+        set /a count_test_main=0
+        for /f %%f in (sources_test_main.txt) do set /a count_test_main+=1
+        echo 🔹 !count_test_main! test files (masterclass)
+        if !count_test_main! GTR 0 (
+            javac --enable-preview --release 24 -encoding UTF-8 -cp "%OUT_PROD%\udemy_lpa_javamasterclass;%OUT_PROD%\misc_utils;%JUNIT_JAR%" -d "%OUT_TEST%\udemy_lpa_javamasterclass" @sources_test_main.txt
+            if !ERRORLEVEL! NEQ 0 (
+                echo ❌ Compilation failed for udemy_lpa_javamasterclass tests
+                exit /b 1
+            )
+            echo ✅ Finished compiling udemy_lpa_javamasterclass tests
+        ) else (
+            echo ⚠️ No test files found for masterclass
+        )
+
+        echo 🔹 Compiling tests (misc_utils)
+        if exist "!TEST_MISC!" (
+            dir /s /b "%TEST_MISC%\*.java" > sources_test_misc.txt
+            set /a count_test_misc=0
+            for /f %%f in (sources_test_misc.txt) do set /a count_test_misc+=1
+            echo 🔹 !count_test_misc! test files (misc_utils)
+            if !count_test_misc! GTR 0 (
+                javac --enable-preview --release 24 -encoding UTF-8 -cp "%OUT_PROD%\udemy_lpa_javamasterclass;%OUT_PROD%\misc_utils;%JUNIT_JAR%" -d "%OUT_TEST%\misc_utils" @sources_test_misc.txt
+                if !ERRORLEVEL! NEQ 0 (
+                    echo ❌ Compilation failed for misc_utils tests
+                    exit /b 1
+                )
+                echo ✅ Finished compiling misc_utils tests
+            ) else (
+                echo ⚠️ No test files found for misc_utils
+            )
+        )
+
+        REM -----------------------------
+        REM Cleanup
+        REM -----------------------------
+        del sources_main.txt sources_misc.txt sources_test_main.txt sources_test_misc.txt >nul 2>&1
+        echo ✅ Compilation step completed successfully
