--- a/.github/workflows/hygiene-checks-pipeline.yaml
+++ b/.github/workflows/hygiene-checks-pipeline.yaml
@@ -1,17 +1,17 @@
 name: 📊 Hygiene Checks Pipeline
 on:
   workflow_dispatch: # run manually
-  schedule:
-    # - cron: '45 06 * * 1-4' # Runs 12:15 PM IST  every WeekDay excluding Friday
-    - cron: '38 7 * * *' # Runs 1:08 PM IST  every Day
-#  push:
+  # schedule:
+  #  - cron: '45 06 * * 1-4' # Runs 12:15 PM IST  every WeekDay excluding Friday
+  #  - cron: '08,38 5,7 * * *' # Runs 1:08 PM IST  every Day
+  # push:
+  #    branches:
+  #   - main
+#  pull_request:
 #    branches:
-#    - main
-  pull_request:
-    branches:
-      - main
-      # - stage
-      # - tech-debt
+#      - main
+#      - stage
+#      - tech-debt
 jobs:
   hygiene-checks:
     name: Hygiene Checks - Checkstyle + PMD + JaCoCo + Sonar
@@ -25,16 +25,20 @@ jobs:
         misc_utils_main=misc_utils/src/main/java/com/hb/study/misc_utils
         udemy_lpa_javamasterclass_test=src/test/java/com/hb/study/udemy_lpa_javamasterclass
         misc_utils_test=misc_utils/src/test/java/com/hb/study/misc_utils
-      JACOCO_MIN_COVERAGE: 9
-      CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: 1008
-      CHECKSTYLE_MAX_VIOLATIONS: 945
-      PMD_MAX_VIOLATIONS: 63
-      BLOCKER_MAX: 0
-      HIGH_MAX: 27          # keep backward compatible
-      MEDIUM_MAX: 63
-      LOW_MAX: 63
-      INFO_MAX: 99
+      # --- Code Coverage ---
+      JACOCO_MIN_COVERAGE: 75        # Require at least 75% coverage
 
+      # --- Aggregate Violations ---
+      CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: 300  # Maximum total violations (Checkstyle + PMD)
+      CHECKSTYLE_MAX_VIOLATIONS: 200            # Max Checkstyle violations per module
+      PMD_MAX_VIOLATIONS: 50                    # Max PMD violations per module
+
+      # --- SonarCloud Severity Thresholds ---
+      BLOCKER_MAX: 0      # Any Blocker fails hygiene
+      HIGH_MAX: 10        # Maximum allowed high severity issues
+      MEDIUM_MAX: 25      # Maximum allowed medium severity issues
+      LOW_MAX: 20         # Maximum allowed low severity issues
+      INFO_MAX: 50        # Maximum allowed informational issues
 
     steps:
       ####################################################
@@ -52,14 +56,23 @@ jobs:
       - name: Setup Hygiene Environment
         id: setup
         uses: ./.github/actions/setup-hygiene-env
+        with:
+          java-version: "24"
+          trigger-event: ${{ github.event_name }}
+          ref-name: ${{ github.ref_name }}
+          head-ref: ${{ github.head_ref }}
+          base-ref: ${{ github.base_ref }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}  # ← pass it here
 
-      ###############################################################
+
+
+        ###############################################################
         # HYGIENE HEALTH CHECKS AND UPLOAD REPORTS - COMPOSITE CALL
       ##############################################################
 
       - name: Hygiene Health Checks and Upload Reports - Composite Call
         id: hygiene-sweep-and-upload-reports
-        uses: ./.github/actions/hygiene-health-sweep-and-upload-reports
+        uses: ./.github/actions/generate-and-upload-reports
         with:
           SKIP_FLAG: ${{ steps.setup.outputs.SKIP_FLAG }}
         env:
@@ -71,11 +84,16 @@ jobs:
 
       - name: PUBLISH GITHUB SUMMARY AND SEND-EMAIL - COMPOSITE CALL
         id: publish-githubsummary-and-sendemail
-        uses: ./.github/actions/publish-githubsummary-and-email
+        uses: ./.github/actions/compute-and-publish-summary
         with:
           startTime: ${{ steps.setup.outputs.startTime }}
-          BRANCH_EXECUTED: ${{ steps.setup.outputs.BRANCH_EXECUTED }}
           SKIP_FLAG: ${{ steps.setup.outputs.SKIP_FLAG }}
+          COMMIT_MSG: ${{ steps.setup.outputs.COMMIT_MSG }}
+          COMMIT_AUTHOR: ${{ steps.setup.outputs.COMMIT_AUTHOR }}
+          TRIGGER_EVENT: ${{ steps.setup.outputs.TRIGGER_EVENT }}
+          SRC_BRANCH: ${{ steps.setup.outputs.SRC_BRANCH }}
+          TGT_BRANCH: ${{ steps.setup.outputs.TGT_BRANCH }}
+          BRANCH_EXECUTED: ${{ steps.setup.outputs.TGT_BRANCH }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SMTP_SERVER_ADDRESS: ${{ vars.SMTP_SERVER_ADDRESS }}
@@ -93,7 +111,7 @@ jobs:
           LOW_MAX:  ${{ env.LOW_MAX }}
           INFO_MAX:  ${{ env.INFO_MAX }}
 
-      #############################
+        #############################
         # FULL CLEANUP AND VERIFY
       ##############################
 
