--- a/.github/actions/publish-email-summary/action.yaml
+++ b/.github/actions/publish-email-summary/action.yaml
@@ -119,6 +119,9 @@ inputs:
   ARTIFACT_URL:
     required: true
     description: ""
+  STAGE_VS_MAIN_STATE:
+    required: true
+    description: ""
 
 runs:
   using: "composite"
@@ -152,6 +155,7 @@ runs:
           </h2>
           <strong>Repository:</strong> <code>${{ github.repository }}</code><br/> 
           <strong>Branch:</strong> <code>${{ inputs.BRANCH_EXECUTED }}</code><br/>
+          <strong>Stage ↔ Main state:</strong> <code>${{ inputs.STAGE_VS_MAIN_STATE }}</code><br/>
           <strong>Duration:</strong> <code>${{ inputs.formattedDuration }}</code><br/>
           <p><strong>Legend:</strong> ✅ = Great / 0 issues, 🟡 = Watch-Out / 1-27 issues, 🔴 = Action Needed / >27 issues</p>
           <h3>📊 Summary</h3>
