--- a/.github/workflows/hygiene-checks-pipeline.yaml
+++ b/.github/workflows/hygiene-checks-pipeline.yaml
@@ -5,7 +5,7 @@ on:
     # # Runs at 9:00 AM and 9:00 PM IST, Monday-Thursday
     # # 9:00 AM IST -> 3:30 AM UTC
     # # 9:00 PM IST -> 3:30 PM UTC
-    # - cron: '30 3,15 * * 1-4'
+    # - cron: '30 3,15 * * 1-4,6'
 
     # # Runs on Friday at 12:09 AM, 9:00 AM, and 12:15 PM IST
     # # 12:09 AM IST -> 6:39 PM UTC (on Thursday)
@@ -14,42 +14,14 @@ on:
     # - cron: '39 18 * * 4' # For Friday 12:09 AM IST (runs on Thursday UTC)
     # - cron: '30 3 * * 5' # For Friday 9:00 AM IST
     # - cron: '45 6 * * 5' # For Friday 12:15 PM IST
-#  push:
+# #  push:
 #    branches:
 #      - main
 
 jobs:
-  # This job will check the commit message and set an output.
-  # It will always run on push to main, but its output determines if the next job runs.
-  check-commit-message:
-    name: Check Commit Message for Hygiene Sweep Trigger
-    runs-on: ubuntu-latest
-    outputs:
-      should_run_hygiene_checks: ${{ steps.check.outputs.should_run }}
-    steps:
-      - name: Get commit message for push events
-        id: check
-        if: github.event_name == 'push'
-        run: |
-          commit_message="${{ github.event.head_commit.message }}"
-          # Regex to find "execute" then "hygiene" then "sweep", separated by any characters.
-          # The pattern is non-greedy (`.*?`) to prevent it from matching a different order.
-          if [[ "$commit_message" =~ execute.*?hygiene.*?sweep ]]; then
-            echo "Match found: commit message contains 'execute hygiene sweep' with separators."
-            echo "should_run=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "No match found in commit message. Skipping."
-            echo "should_run=false" >> "$GITHUB_OUTPUT"
-          fi
-        shell: bash
-
   hygiene-checks:
     name: Hygiene Checks - Checkstyle + PMD + JaCoCo + Sonar
     runs-on: windows-latest
-    # The condition now depends on the output of the `check-commit-message` job.
-    needs: check-commit-message
-    if: needs.check-commit-message.outputs.should_run_hygiene_checks == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    # Alternatively: if: needs.check-commit-message.outputs.should_run_hygiene_checks == 'true' || contains(fromJSON('["schedule", "workflow_dispatch"]'), github.event_name)
     env:
       SONAR_ORG: ${{ vars.SONAR_ORG }}
       SONAR_PROJECT_KEY: ${{ vars.SONAR_PROJECT_KEY }}
@@ -74,6 +46,47 @@ jobs:
       LOW_MAX: 30         # Maximum allowed low severity issues
       INFO_MAX: 50        # Maximum allowed informational issues
     steps:
+      # This step will run only if the event is NOT manual or scheduled or push to main
+      - name: Exit for non-supported events
+        if: github.event_name != 'schedule' && github.event_name != 'workflow_dispatch' && github.event_name != 'push'
+        shell: pwsh
+        run: |
+          Write-Host "This workflow is not configured to run on a '${{ github.event_name }}' event which is not supported → exiting with failure."
+          echo
+          # Exit the job successfully, so it doesn't appear as a failure
+          echo "cancel=true" >> $env:GITHUB_ENV 
+          echo "cancelReason=❌ This workflow is not configured to run on a '${{ github.event_name }}' event which is not supported → exiting with failure." >> $env:GITHUB_ENV
+        
+      # This step will check the commit message and set an output.
+      # It will always run on push to main, but its output determines if the next job runs.
+      - name: Decide whether to run hygiene checks
+        id: decide
+        shell: bash
+        run: |
+            eventName="${{ github.event_name }}"
+            if [[ "$eventName" == "push" ]]; then
+            branchName="${{ github.ref_name }}"  # gives just "main" or the branch name
+              if [[ "$branchName" != "main" ]]; then
+                echo "Push event but branch is '$branchName' (not main) → exiting with failure."
+                echo "cancel=true" >> $GITHUB_ENV
+                echo "cancelReason=❌ Push event but branch is '$branchName' (not main) → exiting with failure." >> $GITHUB_ENV
+              else
+                commit_message="${{ github.event.head_commit.message }}"
+                if [[ "$commit_message" =~ execute.*?hygiene.*?sweep ]]; then
+                  echo "Push to main with matching commit message → continue."
+                else
+                  echo "Push to main without trigger phrase → exiting with failure."
+                  echo "cancel=true" >> $GITHUB_ENV
+                  echo "cancelReason=❌ Push to main without trigger phrase → exiting with failure." >> $GITHUB_ENV
+                fi
+              fi
+            elif [[ "$eventName" == "schedule" || "$eventName" == "workflow_dispatch" ]]; then
+              echo "Event is $eventName → continue."
+            else
+              echo "Unsupported event ($eventName) → exiting with failure."
+              echo "cancel=true" >> $GITHUB_ENV
+              echo "cancelReason=❌ Unsupported event ($eventName) → PR required → exiting with failure." >> $GITHUB_ENV
+            fi
 
       - name: Log trigger for scheduled runs
         if: github.event_name == 'schedule'
@@ -99,23 +112,81 @@ jobs:
         shell: pwsh
         run: Write-Host "✅ Executing due to push event triggered by special commit message."
 
-      - name: Exit for other events
-        # This step will run only if the event is NOT manual or scheduled.
-        if: github.event_name != 'schedule' && github.event_name != 'workflow_dispatch' && github.event_name != 'push'
-        run: |
-          Write-Host "This workflow is not configured to run on a '${{ github.event_name }}' event."
-          exit 0 # Exit the job successfully, so it doesn't appear as a failure
-
-      - name: Checkout Code for Manual and Scheduled triggers
+        #Checkout Code for Supported Event Triggers (schedule, workflow_dispatch, push to main)
+      - name: Checkout Code for Supported Event Triggers
         uses: actions/checkout@v4
         with:
-          # Note: 'pull_request.head.ref' is for pull request events, which you are not
-          # triggering on. 'github.ref_name' is for pushes or schedules.
-          ref: ${{ github.ref_name }}
+          ref: ${{ github.event.repository.default_branch }}
+          token: ${{ secrets.PAT_TOKEN }} # no expiry
           fetch-depth: 0
 
+      - name: Check stage vs main state
+        id: stage_vs_main_state
+        shell: bash
+        env:
+          MAX_AHEAD_COMMITS: 7
+          MAX_DIVERGENCE_DAYS: 7
+        run: |
+          git fetch origin main stage
+          MAX_AHEAD_COMMITS=$(echo "$MAX_AHEAD_COMMITS" | tr -d '\r')
+
+          # Case 1: stage == main
+          if [[ "$(git rev-list origin/main..origin/stage --count)" -eq 0 ]] && \
+             [[ "$(git rev-list origin/stage..origin/main --count)" -eq 0 ]]; then
+            echo "✅ Stage already in sync with main (no merge needed)"  
+            echo "STAGE_VS_MAIN_STATE=✅ Stage already in sync with main (no merge needed)" >> $GITHUB_OUTPUT
+          # Case 2: stage ahead of main (fast-forward possible)
+          elif git merge-base --is-ancestor origin/main origin/stage; then
+            ahead=$(git rev-list origin/main..origin/stage --count)
+            echo "DEBUG: ahead='$ahead' MAX_AHEAD_COMMITS='${MAX_AHEAD_COMMITS}'"
+            if [[ "$ahead" -gt "$MAX_AHEAD_COMMITS" ]]; then 
+              echo "❌ Stage is $ahead commits ahead of main. Please PR stage → main." 
+              echo "cancel=true" >> $GITHUB_ENV
+              echo "cancelReason=❌ Stage is $ahead commits ahead of main. Please PR stage → main → exiting with failure." >> $GITHUB_ENV
+            else 
+              echo "⚠️ Stage is ${ahead} commit(s) ahead of main (not PR’d yet) → skipped merge, executed hygiene on current main" 
+              echo "STAGE_VS_MAIN_STATE=⚠️ Stage is ${ahead} commit(s) ahead of main (not PR’d yet) → skipped merge, executed hygiene on current main" >> $GITHUB_OUTPUT 
+              fi
+          else # Case 3: stage diverged (not rebased)
+              common=$(git merge-base origin/main origin/stage)
+              common_ts=$(git show -s --format=%ct $common)
+              now_ts=$(date +%s)
+              age_days=$(( (now_ts - common_ts) / 86400 ))
+      
+              if [[ "$age_days" -gt "$MAX_DIVERGENCE_DAYS" ]]; then
+                  echo "❌ Stage diverged from main for $age_days days. Please rebase stage → main → exiting with failure."
+                  echo "cancel=true" >> $GITHUB_ENV
+                  echo "cancelReason=❌ Stage diverged for ${age_days}d → rebase required → exiting with failure." >> $GITHUB_ENV
+              fi
+              echo "⚠️ Stage is not rebased on main (last common ancestor $age_days days ago) → executed hygiene on current main"
+              echo "STAGE_VS_MAIN_STATE=⚠️ Stage diverged ~${age_days}d ago → executed hygiene on current main" >> $GITHUB_OUTPUT
+              # echo "⚠️ Stage is not rebased on main → executed hygiene on current main"
+              # echo "STAGE_VS_MAIN_STATE=⚠️ Stage is not rebased on main → executed hygiene on current main" >> $GITHUB_OUTPUT
+          fi 
+
+      - name: Cancel current workflow gracefully
+        if: env.cancel == 'true'
+        shell: pwsh
+        run: |
+          $msg = "$env:cancelReason"
+          Write-Host "ℹ️ Failing the job: $msg"
+          
+          # Add a nice header into GitHub Run Summary (Markdown)
+          echo "### ❌ Hygiene Checks Cancelled" >> $env:GITHUB_STEP_SUMMARY
+          echo "" >> $env:GITHUB_STEP_SUMMARY
+          echo "$msg" >> $env:GITHUB_STEP_SUMMARY
+          echo "" >> $env:GITHUB_STEP_SUMMARY
+          echo "**Triggered by:** ${{ github.event_name }}" >> $env:GITHUB_STEP_SUMMARY
+          
+          # If you want to include branch/commit details, uncomment:
+          echo "**Branch:** ${{ github.ref_name }}" >> $env:GITHUB_STEP_SUMMARY
+          echo "**Commit Message:** ${{ github.event.head_commit.message }}" >> $env:GITHUB_STEP_SUMMARY
+          
+          # Stop execution here
+          exit 1
+  
       ####################################################
-            # Hygiene Environment Initialization
+          # Hygiene Environment Initialization
       ####################################################
       - name: Setup Hygiene Environment
         id: setup
@@ -129,7 +200,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
         ###############################################################
-            # HYGIENE HEALTH CHECKS AND UPLOAD REPORTS - COMPOSITE CALL
+          # HYGIENE HEALTH CHECKS AND UPLOAD REPORTS - COMPOSITE CALL
         ##############################################################
 
       - name: Hygiene Health Checks and Upload Reports
@@ -139,8 +210,10 @@ jobs:
           SKIP_FLAG: ${{ steps.setup.outputs.SKIP_FLAG }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_SCANNER_BIN: ${{ steps.setup.outputs.scanner_bin_win }}
+
         ##############################################################
-            # PUBLISH GITHUB SUMMARY AND SEND-EMAIL - COMPOSITE CALL
+          # PUBLISH GITHUB SUMMARY AND SEND-EMAIL - COMPOSITE CALL
         ##############################################################
 
       - name: PUBLISH GITHUB SUMMARY AND SEND-EMAIL
@@ -156,6 +229,7 @@ jobs:
           TGT_BRANCH: ${{ steps.setup.outputs.TGT_BRANCH }}
           BRANCH_EXECUTED: ${{ steps.setup.outputs.TGT_BRANCH }}
           ARTIFACT_URL: ${{ steps.hygiene-sweep-and-upload-reports.outputs.ARTIFACT_URL }}
+          STAGE_VS_MAIN_STATE: ${{ steps.stage_vs_main_state.outputs.STAGE_VS_MAIN_STATE }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SMTP_SERVER_ADDRESS: ${{ vars.SMTP_SERVER_ADDRESS }}
@@ -168,13 +242,13 @@ jobs:
           CHECKSTYLE_MAX_VIOLATIONS: ${{ env.CHECKSTYLE_MAX_VIOLATIONS }}
           PMD_MAX_VIOLATIONS: ${{ env.PMD_MAX_VIOLATIONS }}
           BLOCKER_MAX: ${{ env.BLOCKER_MAX }}
-          HIGH_MAX: ${{ env.HIGH_MAX }}          # keep backward compatible
+          HIGH_MAX: ${{ env.HIGH_MAX }}
           MEDIUM_MAX: ${{ env.MEDIUM_MAX }}
           LOW_MAX: ${{ env.LOW_MAX }}
           INFO_MAX: ${{ env.INFO_MAX }}
 
         #############################
-            # FULL CLEANUP AND VERIFY
+          # FULL CLEANUP AND VERIFY
         ##############################
 
       - name: Full Cleanup and Verify Composite Call
