--- a/.github/workflows/hygiene-checks-pipeline.yaml
+++ b/.github/workflows/hygiene-checks-pipeline.yaml
@@ -2,10 +2,10 @@ name: 📊 Hygiene Checks Pipeline
 on:
   workflow_dispatch: # Run manually
   # schedule:
-    Runs at 3:30 AM UTC (9:00 AM IST) and 3:30 PM UTC (9:00 PM IST), every Monday-Thursday and Saturday
+    # Runs at 3:30 AM UTC (9:00 AM IST) and 3:30 PM UTC (9:00 PM IST), every Monday-Thursday and Saturday
     # - cron: '30 3,15 * * 1-4,6'
-    Runs on 6:39 PM UTC on Thursday ( 12:09 AM IST on Friday),
-    3:30 AM UTC on Friday (9:00 AM IST on Friday) and 6:45 AM UTC on Friday (12:15 PM IST on Friday)
+    # Runs on 6:39 PM UTC on Thursday ( 12:09 AM IST on Friday),
+    # 3:30 AM UTC on Friday (9:00 AM IST on Friday) and 6:45 AM UTC on Friday (12:15 PM IST on Friday)
     # - cron: '39 18 * * 4' # For Friday 12:09 AM IST (runs on Thursday UTC)
     # - cron: '30 3 * * 5' # For Friday 9:00 AM IST
     # - cron: '45 6 * * 5' # For Friday 12:15 PM IST
